Flex_Bison/parser.output
Gramática

    0 $accept: program $end

    1 program: statements

    2 statements: statement
    3           | statements statement

    4 statement: IF expression THEN statements ELSE statements ENDIF
    5          | IF expression THEN statements ENDIF
    6          | WHILE expression DO statements ENDWHILE
    7          | FUNCTION IDENTIFIER LEFT_PARENTHESIS parameter_list RIGHT_PARENTHESIS statements RETURN expression ENDFUNCTION
    8          | DECLARE IDENTIFIER AS type
    9          | IDENTIFIER EQUAL expression
   10          | PRINT expression

   11 parameter_list: %empty
   12               | IDENTIFIER AS type
   13               | parameter_list COMMA IDENTIFIER

   14 expression: expression OR term
   15           | expression AND term
   16           | expression EQUAL term
   17           | expression COMP_EQUAL term
   18           | expression NOT_EQUAL term
   19           | expression LESS_THAN term
   20           | expression GREATER_THAN term
   21           | expression LESS_THAN_OR_EQUAL term
   22           | expression GREATER_THAN_OR_EQUAL term
   23           | term

   24 term: term PLUS factor
   25     | term MINUS factor
   26     | factor

   27 factor: factor LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
   28       | value

   29 value: NUMBER
   30      | STRING
   31      | IDENTIFIER

   32 type: TYPE_STRING
   33     | TYPE_INTEGER


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    NUMBER (258) 29
    STRING (259) 30
    IDENTIFIER (260) 7 8 9 12 13 31
    IF (261) 4 5
    THEN (262) 4 5
    ELSE (263) 4
    ENDIF (264) 4 5
    WHILE (265) 6
    DO (266) 6
    ENDWHILE (267) 6
    FUNCTION (268) 7
    ENDFUNCTION (269) 7
    DECLARE (270) 8
    AS (271) 8 12
    PRINT (272) 10
    TYPE_STRING (273) 32
    TYPE_INTEGER (274) 33
    AND (275) 15
    OR (276) 14
    EQUAL (277) 9 16
    COMP_EQUAL (278) 17
    NOT_EQUAL (279) 18
    LESS_THAN (280) 19
    GREATER_THAN (281) 20
    LESS_THAN_OR_EQUAL (282) 21
    GREATER_THAN_OR_EQUAL (283) 22
    LEFT_PARENTHESIS (284) 7 27
    RIGHT_PARENTHESIS (285) 7 27
    PLUS (286) 24
    MINUS (287) 25
    COMMA (288) 13
    RETURN (289) 7


Não terminais com as regras onde eles aparecem

    $accept (35)
        à esquerda: 0
    program (36)
        à esquerda: 1
        à direita: 0
    statements (37)
        à esquerda: 2 3
        à direita: 1 3 4 5 6 7
    statement (38)
        à esquerda: 4 5 6 7 8 9 10
        à direita: 2 3
    parameter_list (39)
        à esquerda: 11 12 13
        à direita: 7 13
    expression (40)
        à esquerda: 14 15 16 17 18 19 20 21 22 23
        à direita: 4 5 6 7 9 10 14 15 16 17 18 19 20 21 22 27
    term (41)
        à esquerda: 24 25 26
        à direita: 14 15 16 17 18 19 20 21 22 23 24 25
    factor (42)
        à esquerda: 27 28
        à direita: 24 25 26 27
    value (43)
        à esquerda: 29 30 31
        à direita: 28
    type (44)
        à esquerda: 32 33
        à direita: 8 12


Estado 0

    0 $accept: • program $end

    IDENTIFIER  deslocar, e ir ao estado 1
    IF          deslocar, e ir ao estado 2
    WHILE       deslocar, e ir ao estado 3
    FUNCTION    deslocar, e ir ao estado 4
    DECLARE     deslocar, e ir ao estado 5
    PRINT       deslocar, e ir ao estado 6

    program     ir ao estado 7
    statements  ir ao estado 8
    statement   ir ao estado 9


Estado 1

    9 statement: IDENTIFIER • EQUAL expression

    EQUAL  deslocar, e ir ao estado 10


Estado 2

    4 statement: IF • expression THEN statements ELSE statements ENDIF
    5          | IF • expression THEN statements ENDIF

    NUMBER      deslocar, e ir ao estado 11
    STRING      deslocar, e ir ao estado 12
    IDENTIFIER  deslocar, e ir ao estado 13

    expression  ir ao estado 14
    term        ir ao estado 15
    factor      ir ao estado 16
    value       ir ao estado 17


Estado 3

    6 statement: WHILE • expression DO statements ENDWHILE

    NUMBER      deslocar, e ir ao estado 11
    STRING      deslocar, e ir ao estado 12
    IDENTIFIER  deslocar, e ir ao estado 13

    expression  ir ao estado 18
    term        ir ao estado 15
    factor      ir ao estado 16
    value       ir ao estado 17


Estado 4

    7 statement: FUNCTION • IDENTIFIER LEFT_PARENTHESIS parameter_list RIGHT_PARENTHESIS statements RETURN expression ENDFUNCTION

    IDENTIFIER  deslocar, e ir ao estado 19


Estado 5

    8 statement: DECLARE • IDENTIFIER AS type

    IDENTIFIER  deslocar, e ir ao estado 20


Estado 6

   10 statement: PRINT • expression

    NUMBER      deslocar, e ir ao estado 11
    STRING      deslocar, e ir ao estado 12
    IDENTIFIER  deslocar, e ir ao estado 13

    expression  ir ao estado 21
    term        ir ao estado 15
    factor      ir ao estado 16
    value       ir ao estado 17


Estado 7

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 22


Estado 8

    1 program: statements •
    3 statements: statements • statement

    IDENTIFIER  deslocar, e ir ao estado 1
    IF          deslocar, e ir ao estado 2
    WHILE       deslocar, e ir ao estado 3
    FUNCTION    deslocar, e ir ao estado 4
    DECLARE     deslocar, e ir ao estado 5
    PRINT       deslocar, e ir ao estado 6

    $padrão  reduzir usando a regra 1 (program)

    statement  ir ao estado 23


Estado 9

    2 statements: statement •

    $padrão  reduzir usando a regra 2 (statements)


Estado 10

    9 statement: IDENTIFIER EQUAL • expression

    NUMBER      deslocar, e ir ao estado 11
    STRING      deslocar, e ir ao estado 12
    IDENTIFIER  deslocar, e ir ao estado 13

    expression  ir ao estado 24
    term        ir ao estado 15
    factor      ir ao estado 16
    value       ir ao estado 17


Estado 11

   29 value: NUMBER •

    $padrão  reduzir usando a regra 29 (value)


Estado 12

   30 value: STRING •

    $padrão  reduzir usando a regra 30 (value)


Estado 13

   31 value: IDENTIFIER •

    $padrão  reduzir usando a regra 31 (value)


Estado 14

    4 statement: IF expression • THEN statements ELSE statements ENDIF
    5          | IF expression • THEN statements ENDIF
   14 expression: expression • OR term
   15           | expression • AND term
   16           | expression • EQUAL term
   17           | expression • COMP_EQUAL term
   18           | expression • NOT_EQUAL term
   19           | expression • LESS_THAN term
   20           | expression • GREATER_THAN term
   21           | expression • LESS_THAN_OR_EQUAL term
   22           | expression • GREATER_THAN_OR_EQUAL term

    THEN                   deslocar, e ir ao estado 25
    AND                    deslocar, e ir ao estado 26
    OR                     deslocar, e ir ao estado 27
    EQUAL                  deslocar, e ir ao estado 28
    COMP_EQUAL             deslocar, e ir ao estado 29
    NOT_EQUAL              deslocar, e ir ao estado 30
    LESS_THAN              deslocar, e ir ao estado 31
    GREATER_THAN           deslocar, e ir ao estado 32
    LESS_THAN_OR_EQUAL     deslocar, e ir ao estado 33
    GREATER_THAN_OR_EQUAL  deslocar, e ir ao estado 34


Estado 15

   23 expression: term •
   24 term: term • PLUS factor
   25     | term • MINUS factor

    PLUS   deslocar, e ir ao estado 35
    MINUS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 23 (expression)


Estado 16

   26 term: factor •
   27 factor: factor • LEFT_PARENTHESIS expression RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 26 (term)


Estado 17

   28 factor: value •

    $padrão  reduzir usando a regra 28 (factor)


Estado 18

    6 statement: WHILE expression • DO statements ENDWHILE
   14 expression: expression • OR term
   15           | expression • AND term
   16           | expression • EQUAL term
   17           | expression • COMP_EQUAL term
   18           | expression • NOT_EQUAL term
   19           | expression • LESS_THAN term
   20           | expression • GREATER_THAN term
   21           | expression • LESS_THAN_OR_EQUAL term
   22           | expression • GREATER_THAN_OR_EQUAL term

    DO                     deslocar, e ir ao estado 38
    AND                    deslocar, e ir ao estado 26
    OR                     deslocar, e ir ao estado 27
    EQUAL                  deslocar, e ir ao estado 28
    COMP_EQUAL             deslocar, e ir ao estado 29
    NOT_EQUAL              deslocar, e ir ao estado 30
    LESS_THAN              deslocar, e ir ao estado 31
    GREATER_THAN           deslocar, e ir ao estado 32
    LESS_THAN_OR_EQUAL     deslocar, e ir ao estado 33
    GREATER_THAN_OR_EQUAL  deslocar, e ir ao estado 34


Estado 19

    7 statement: FUNCTION IDENTIFIER • LEFT_PARENTHESIS parameter_list RIGHT_PARENTHESIS statements RETURN expression ENDFUNCTION

    LEFT_PARENTHESIS  deslocar, e ir ao estado 39


Estado 20

    8 statement: DECLARE IDENTIFIER • AS type

    AS  deslocar, e ir ao estado 40


Estado 21

   10 statement: PRINT expression •
   14 expression: expression • OR term
   15           | expression • AND term
   16           | expression • EQUAL term
   17           | expression • COMP_EQUAL term
   18           | expression • NOT_EQUAL term
   19           | expression • LESS_THAN term
   20           | expression • GREATER_THAN term
   21           | expression • LESS_THAN_OR_EQUAL term
   22           | expression • GREATER_THAN_OR_EQUAL term

    AND                    deslocar, e ir ao estado 26
    OR                     deslocar, e ir ao estado 27
    EQUAL                  deslocar, e ir ao estado 28
    COMP_EQUAL             deslocar, e ir ao estado 29
    NOT_EQUAL              deslocar, e ir ao estado 30
    LESS_THAN              deslocar, e ir ao estado 31
    GREATER_THAN           deslocar, e ir ao estado 32
    LESS_THAN_OR_EQUAL     deslocar, e ir ao estado 33
    GREATER_THAN_OR_EQUAL  deslocar, e ir ao estado 34

    $padrão  reduzir usando a regra 10 (statement)


Estado 22

    0 $accept: program $end •

    $padrão  aceitar


Estado 23

    3 statements: statements statement •

    $padrão  reduzir usando a regra 3 (statements)


Estado 24

    9 statement: IDENTIFIER EQUAL expression •
   14 expression: expression • OR term
   15           | expression • AND term
   16           | expression • EQUAL term
   17           | expression • COMP_EQUAL term
   18           | expression • NOT_EQUAL term
   19           | expression • LESS_THAN term
   20           | expression • GREATER_THAN term
   21           | expression • LESS_THAN_OR_EQUAL term
   22           | expression • GREATER_THAN_OR_EQUAL term

    AND                    deslocar, e ir ao estado 26
    OR                     deslocar, e ir ao estado 27
    EQUAL                  deslocar, e ir ao estado 28
    COMP_EQUAL             deslocar, e ir ao estado 29
    NOT_EQUAL              deslocar, e ir ao estado 30
    LESS_THAN              deslocar, e ir ao estado 31
    GREATER_THAN           deslocar, e ir ao estado 32
    LESS_THAN_OR_EQUAL     deslocar, e ir ao estado 33
    GREATER_THAN_OR_EQUAL  deslocar, e ir ao estado 34

    $padrão  reduzir usando a regra 9 (statement)


Estado 25

    4 statement: IF expression THEN • statements ELSE statements ENDIF
    5          | IF expression THEN • statements ENDIF

    IDENTIFIER  deslocar, e ir ao estado 1
    IF          deslocar, e ir ao estado 2
    WHILE       deslocar, e ir ao estado 3
    FUNCTION    deslocar, e ir ao estado 4
    DECLARE     deslocar, e ir ao estado 5
    PRINT       deslocar, e ir ao estado 6

    statements  ir ao estado 41
    statement   ir ao estado 9


Estado 26

   15 expression: expression AND • term

    NUMBER      deslocar, e ir ao estado 11
    STRING      deslocar, e ir ao estado 12
    IDENTIFIER  deslocar, e ir ao estado 13

    term    ir ao estado 42
    factor  ir ao estado 16
    value   ir ao estado 17


Estado 27

   14 expression: expression OR • term

    NUMBER      deslocar, e ir ao estado 11
    STRING      deslocar, e ir ao estado 12
    IDENTIFIER  deslocar, e ir ao estado 13

    term    ir ao estado 43
    factor  ir ao estado 16
    value   ir ao estado 17


Estado 28

   16 expression: expression EQUAL • term

    NUMBER      deslocar, e ir ao estado 11
    STRING      deslocar, e ir ao estado 12
    IDENTIFIER  deslocar, e ir ao estado 13

    term    ir ao estado 44
    factor  ir ao estado 16
    value   ir ao estado 17


Estado 29

   17 expression: expression COMP_EQUAL • term

    NUMBER      deslocar, e ir ao estado 11
    STRING      deslocar, e ir ao estado 12
    IDENTIFIER  deslocar, e ir ao estado 13

    term    ir ao estado 45
    factor  ir ao estado 16
    value   ir ao estado 17


Estado 30

   18 expression: expression NOT_EQUAL • term

    NUMBER      deslocar, e ir ao estado 11
    STRING      deslocar, e ir ao estado 12
    IDENTIFIER  deslocar, e ir ao estado 13

    term    ir ao estado 46
    factor  ir ao estado 16
    value   ir ao estado 17


Estado 31

   19 expression: expression LESS_THAN • term

    NUMBER      deslocar, e ir ao estado 11
    STRING      deslocar, e ir ao estado 12
    IDENTIFIER  deslocar, e ir ao estado 13

    term    ir ao estado 47
    factor  ir ao estado 16
    value   ir ao estado 17


Estado 32

   20 expression: expression GREATER_THAN • term

    NUMBER      deslocar, e ir ao estado 11
    STRING      deslocar, e ir ao estado 12
    IDENTIFIER  deslocar, e ir ao estado 13

    term    ir ao estado 48
    factor  ir ao estado 16
    value   ir ao estado 17


Estado 33

   21 expression: expression LESS_THAN_OR_EQUAL • term

    NUMBER      deslocar, e ir ao estado 11
    STRING      deslocar, e ir ao estado 12
    IDENTIFIER  deslocar, e ir ao estado 13

    term    ir ao estado 49
    factor  ir ao estado 16
    value   ir ao estado 17


Estado 34

   22 expression: expression GREATER_THAN_OR_EQUAL • term

    NUMBER      deslocar, e ir ao estado 11
    STRING      deslocar, e ir ao estado 12
    IDENTIFIER  deslocar, e ir ao estado 13

    term    ir ao estado 50
    factor  ir ao estado 16
    value   ir ao estado 17


Estado 35

   24 term: term PLUS • factor

    NUMBER      deslocar, e ir ao estado 11
    STRING      deslocar, e ir ao estado 12
    IDENTIFIER  deslocar, e ir ao estado 13

    factor  ir ao estado 51
    value   ir ao estado 17


Estado 36

   25 term: term MINUS • factor

    NUMBER      deslocar, e ir ao estado 11
    STRING      deslocar, e ir ao estado 12
    IDENTIFIER  deslocar, e ir ao estado 13

    factor  ir ao estado 52
    value   ir ao estado 17


Estado 37

   27 factor: factor LEFT_PARENTHESIS • expression RIGHT_PARENTHESIS

    NUMBER      deslocar, e ir ao estado 11
    STRING      deslocar, e ir ao estado 12
    IDENTIFIER  deslocar, e ir ao estado 13

    expression  ir ao estado 53
    term        ir ao estado 15
    factor      ir ao estado 16
    value       ir ao estado 17


Estado 38

    6 statement: WHILE expression DO • statements ENDWHILE

    IDENTIFIER  deslocar, e ir ao estado 1
    IF          deslocar, e ir ao estado 2
    WHILE       deslocar, e ir ao estado 3
    FUNCTION    deslocar, e ir ao estado 4
    DECLARE     deslocar, e ir ao estado 5
    PRINT       deslocar, e ir ao estado 6

    statements  ir ao estado 54
    statement   ir ao estado 9


Estado 39

    7 statement: FUNCTION IDENTIFIER LEFT_PARENTHESIS • parameter_list RIGHT_PARENTHESIS statements RETURN expression ENDFUNCTION

    IDENTIFIER  deslocar, e ir ao estado 55

    $padrão  reduzir usando a regra 11 (parameter_list)

    parameter_list  ir ao estado 56


Estado 40

    8 statement: DECLARE IDENTIFIER AS • type

    TYPE_STRING   deslocar, e ir ao estado 57
    TYPE_INTEGER  deslocar, e ir ao estado 58

    type  ir ao estado 59


Estado 41

    3 statements: statements • statement
    4 statement: IF expression THEN statements • ELSE statements ENDIF
    5          | IF expression THEN statements • ENDIF

    IDENTIFIER  deslocar, e ir ao estado 1
    IF          deslocar, e ir ao estado 2
    ELSE        deslocar, e ir ao estado 60
    ENDIF       deslocar, e ir ao estado 61
    WHILE       deslocar, e ir ao estado 3
    FUNCTION    deslocar, e ir ao estado 4
    DECLARE     deslocar, e ir ao estado 5
    PRINT       deslocar, e ir ao estado 6

    statement  ir ao estado 23


Estado 42

   15 expression: expression AND term •
   24 term: term • PLUS factor
   25     | term • MINUS factor

    PLUS   deslocar, e ir ao estado 35
    MINUS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 15 (expression)


Estado 43

   14 expression: expression OR term •
   24 term: term • PLUS factor
   25     | term • MINUS factor

    PLUS   deslocar, e ir ao estado 35
    MINUS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 14 (expression)


Estado 44

   16 expression: expression EQUAL term •
   24 term: term • PLUS factor
   25     | term • MINUS factor

    PLUS   deslocar, e ir ao estado 35
    MINUS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 16 (expression)


Estado 45

   17 expression: expression COMP_EQUAL term •
   24 term: term • PLUS factor
   25     | term • MINUS factor

    PLUS   deslocar, e ir ao estado 35
    MINUS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 17 (expression)


Estado 46

   18 expression: expression NOT_EQUAL term •
   24 term: term • PLUS factor
   25     | term • MINUS factor

    PLUS   deslocar, e ir ao estado 35
    MINUS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 18 (expression)


Estado 47

   19 expression: expression LESS_THAN term •
   24 term: term • PLUS factor
   25     | term • MINUS factor

    PLUS   deslocar, e ir ao estado 35
    MINUS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 19 (expression)


Estado 48

   20 expression: expression GREATER_THAN term •
   24 term: term • PLUS factor
   25     | term • MINUS factor

    PLUS   deslocar, e ir ao estado 35
    MINUS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 20 (expression)


Estado 49

   21 expression: expression LESS_THAN_OR_EQUAL term •
   24 term: term • PLUS factor
   25     | term • MINUS factor

    PLUS   deslocar, e ir ao estado 35
    MINUS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 21 (expression)


Estado 50

   22 expression: expression GREATER_THAN_OR_EQUAL term •
   24 term: term • PLUS factor
   25     | term • MINUS factor

    PLUS   deslocar, e ir ao estado 35
    MINUS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 22 (expression)


Estado 51

   24 term: term PLUS factor •
   27 factor: factor • LEFT_PARENTHESIS expression RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 24 (term)


Estado 52

   25 term: term MINUS factor •
   27 factor: factor • LEFT_PARENTHESIS expression RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 25 (term)


Estado 53

   14 expression: expression • OR term
   15           | expression • AND term
   16           | expression • EQUAL term
   17           | expression • COMP_EQUAL term
   18           | expression • NOT_EQUAL term
   19           | expression • LESS_THAN term
   20           | expression • GREATER_THAN term
   21           | expression • LESS_THAN_OR_EQUAL term
   22           | expression • GREATER_THAN_OR_EQUAL term
   27 factor: factor LEFT_PARENTHESIS expression • RIGHT_PARENTHESIS

    AND                    deslocar, e ir ao estado 26
    OR                     deslocar, e ir ao estado 27
    EQUAL                  deslocar, e ir ao estado 28
    COMP_EQUAL             deslocar, e ir ao estado 29
    NOT_EQUAL              deslocar, e ir ao estado 30
    LESS_THAN              deslocar, e ir ao estado 31
    GREATER_THAN           deslocar, e ir ao estado 32
    LESS_THAN_OR_EQUAL     deslocar, e ir ao estado 33
    GREATER_THAN_OR_EQUAL  deslocar, e ir ao estado 34
    RIGHT_PARENTHESIS      deslocar, e ir ao estado 62


Estado 54

    3 statements: statements • statement
    6 statement: WHILE expression DO statements • ENDWHILE

    IDENTIFIER  deslocar, e ir ao estado 1
    IF          deslocar, e ir ao estado 2
    WHILE       deslocar, e ir ao estado 3
    ENDWHILE    deslocar, e ir ao estado 63
    FUNCTION    deslocar, e ir ao estado 4
    DECLARE     deslocar, e ir ao estado 5
    PRINT       deslocar, e ir ao estado 6

    statement  ir ao estado 23


Estado 55

   12 parameter_list: IDENTIFIER • AS type

    AS  deslocar, e ir ao estado 64


Estado 56

    7 statement: FUNCTION IDENTIFIER LEFT_PARENTHESIS parameter_list • RIGHT_PARENTHESIS statements RETURN expression ENDFUNCTION
   13 parameter_list: parameter_list • COMMA IDENTIFIER

    RIGHT_PARENTHESIS  deslocar, e ir ao estado 65
    COMMA              deslocar, e ir ao estado 66


Estado 57

   32 type: TYPE_STRING •

    $padrão  reduzir usando a regra 32 (type)


Estado 58

   33 type: TYPE_INTEGER •

    $padrão  reduzir usando a regra 33 (type)


Estado 59

    8 statement: DECLARE IDENTIFIER AS type •

    $padrão  reduzir usando a regra 8 (statement)


Estado 60

    4 statement: IF expression THEN statements ELSE • statements ENDIF

    IDENTIFIER  deslocar, e ir ao estado 1
    IF          deslocar, e ir ao estado 2
    WHILE       deslocar, e ir ao estado 3
    FUNCTION    deslocar, e ir ao estado 4
    DECLARE     deslocar, e ir ao estado 5
    PRINT       deslocar, e ir ao estado 6

    statements  ir ao estado 67
    statement   ir ao estado 9


Estado 61

    5 statement: IF expression THEN statements ENDIF •

    $padrão  reduzir usando a regra 5 (statement)


Estado 62

   27 factor: factor LEFT_PARENTHESIS expression RIGHT_PARENTHESIS •

    $padrão  reduzir usando a regra 27 (factor)


Estado 63

    6 statement: WHILE expression DO statements ENDWHILE •

    $padrão  reduzir usando a regra 6 (statement)


Estado 64

   12 parameter_list: IDENTIFIER AS • type

    TYPE_STRING   deslocar, e ir ao estado 57
    TYPE_INTEGER  deslocar, e ir ao estado 58

    type  ir ao estado 68


Estado 65

    7 statement: FUNCTION IDENTIFIER LEFT_PARENTHESIS parameter_list RIGHT_PARENTHESIS • statements RETURN expression ENDFUNCTION

    IDENTIFIER  deslocar, e ir ao estado 1
    IF          deslocar, e ir ao estado 2
    WHILE       deslocar, e ir ao estado 3
    FUNCTION    deslocar, e ir ao estado 4
    DECLARE     deslocar, e ir ao estado 5
    PRINT       deslocar, e ir ao estado 6

    statements  ir ao estado 69
    statement   ir ao estado 9


Estado 66

   13 parameter_list: parameter_list COMMA • IDENTIFIER

    IDENTIFIER  deslocar, e ir ao estado 70


Estado 67

    3 statements: statements • statement
    4 statement: IF expression THEN statements ELSE statements • ENDIF

    IDENTIFIER  deslocar, e ir ao estado 1
    IF          deslocar, e ir ao estado 2
    ENDIF       deslocar, e ir ao estado 71
    WHILE       deslocar, e ir ao estado 3
    FUNCTION    deslocar, e ir ao estado 4
    DECLARE     deslocar, e ir ao estado 5
    PRINT       deslocar, e ir ao estado 6

    statement  ir ao estado 23


Estado 68

   12 parameter_list: IDENTIFIER AS type •

    $padrão  reduzir usando a regra 12 (parameter_list)


Estado 69

    3 statements: statements • statement
    7 statement: FUNCTION IDENTIFIER LEFT_PARENTHESIS parameter_list RIGHT_PARENTHESIS statements • RETURN expression ENDFUNCTION

    IDENTIFIER  deslocar, e ir ao estado 1
    IF          deslocar, e ir ao estado 2
    WHILE       deslocar, e ir ao estado 3
    FUNCTION    deslocar, e ir ao estado 4
    DECLARE     deslocar, e ir ao estado 5
    PRINT       deslocar, e ir ao estado 6
    RETURN      deslocar, e ir ao estado 72

    statement  ir ao estado 23


Estado 70

   13 parameter_list: parameter_list COMMA IDENTIFIER •

    $padrão  reduzir usando a regra 13 (parameter_list)


Estado 71

    4 statement: IF expression THEN statements ELSE statements ENDIF •

    $padrão  reduzir usando a regra 4 (statement)


Estado 72

    7 statement: FUNCTION IDENTIFIER LEFT_PARENTHESIS parameter_list RIGHT_PARENTHESIS statements RETURN • expression ENDFUNCTION

    NUMBER      deslocar, e ir ao estado 11
    STRING      deslocar, e ir ao estado 12
    IDENTIFIER  deslocar, e ir ao estado 13

    expression  ir ao estado 73
    term        ir ao estado 15
    factor      ir ao estado 16
    value       ir ao estado 17


Estado 73

    7 statement: FUNCTION IDENTIFIER LEFT_PARENTHESIS parameter_list RIGHT_PARENTHESIS statements RETURN expression • ENDFUNCTION
   14 expression: expression • OR term
   15           | expression • AND term
   16           | expression • EQUAL term
   17           | expression • COMP_EQUAL term
   18           | expression • NOT_EQUAL term
   19           | expression • LESS_THAN term
   20           | expression • GREATER_THAN term
   21           | expression • LESS_THAN_OR_EQUAL term
   22           | expression • GREATER_THAN_OR_EQUAL term

    ENDFUNCTION            deslocar, e ir ao estado 74
    AND                    deslocar, e ir ao estado 26
    OR                     deslocar, e ir ao estado 27
    EQUAL                  deslocar, e ir ao estado 28
    COMP_EQUAL             deslocar, e ir ao estado 29
    NOT_EQUAL              deslocar, e ir ao estado 30
    LESS_THAN              deslocar, e ir ao estado 31
    GREATER_THAN           deslocar, e ir ao estado 32
    LESS_THAN_OR_EQUAL     deslocar, e ir ao estado 33
    GREATER_THAN_OR_EQUAL  deslocar, e ir ao estado 34


Estado 74

    7 statement: FUNCTION IDENTIFIER LEFT_PARENTHESIS parameter_list RIGHT_PARENTHESIS statements RETURN expression ENDFUNCTION •

    $padrão  reduzir usando a regra 7 (statement)
